--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
+RewriteRule ^([^\.]+)$ index.php [NC,L]
 #ErrorDocument 404 /404.html
